# dotfiles

./: .bashrc  .gitconfig  .gitignore  .pre-commit-config.yaml  .ssh_config  .zshrc  README.md  setup.sh  setup_claude.sh  setup_gitconfig.sh  setup_mcp.sh  shell_setup_base  shell_setup_base.sh  top_level_gitconfig
.github/workflows/: lint.yml
claude/: CLAUDE_personal.md  CLAUDE_top_level.md
claude/skills/bk-ci/: SKILL.md
claude/skills/fix-pr/: SKILL.md
claude/skills/rebase-chain/: SKILL.md
claude/skills/review-code/: SKILL.md
claude/skills/tdd-fix/: SKILL.md
mcp/bk/: README.md  pyproject.toml
mcp/bk/src/bk_mcp/: server.py
mcp/comet/: README.md  pyproject.toml
mcp/comet/src/comet_mcp/: server.py
mcp/ghpr/: README.md  pyproject.toml
mcp/ghpr/src/ghpr_mcp/: server.py
scripts/: bk.sh  black_flake8.sh  ghpr.sh
scripts/comet/: README.md  pyproject.toml
scripts/comet/src/comet_check/: api.py  cli.py
windows/: mac-like.ahk
zsh_config/: .zshrc  top_level_zshrc  top_level_zshrc.sh
zsh_config/zsh_custom/themes/: minimal-git-time.zsh-theme
