[project]
name = "comet-mcp"
version = "0.1.0"
description = "MCP server exposing Comet ML experiment queries as typed tools."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "comet-check",
]

[project.scripts]
comet-mcp = "comet_mcp.server:main"

[tool.uv.sources]
comet-check = { path = "../../scripts/comet", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comet_mcp"]
