[project]
name = "ghpr-mcp"
version = "0.1.0"
description = "MCP server exposing GitHub PR helpers (info/comments/diff/files/checks) as typed tools."
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
ghpr-mcp = "ghpr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghpr_mcp"]
